added e-commerce project.

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/google.jpg" class="project__img" alt="" />
+                <img src="./assets/ecommerce.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Google</h3>
+                  <h3 class="project__description--title">E-commerce Project</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
+                    HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -168,14 +168,14 @@
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/velascojk"
+                      href="https://github.com/velascojk/e-commerce-project"
                       class="project__description--link"
                       target="_blank"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://google.com"
+                      href="https://velascojk.github.io/e-commerce-project/"
                       class="project__description--link"
                       target="_blank"
                     >
