--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <div class="about-me__links">
               <a
-                href="https://www.google.com/"
+                href="https://www.linkedin.com/in/velascojk/"
                 class="about-me__link"
                 target="_blank"
               >
@@ -69,11 +69,8 @@
               >
                 <i class="fab fa-github"></i>
               </a>
-              <a
-                href="https://www.google.com/"
-                class="about-me__link"
-                target="_blank"
-              >
+              <a href="mailto:jkvelasco2018@gmail.com" 
+              class="about-me__link">
                 <i class="far fa-envelope"></i>
               </a>
               <a
@@ -160,11 +157,7 @@
                     HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Necessitatibus quis asperiores repudiandae hic sequi, eum
-                    odio obcaecati minima modi iure laudantium ipsam praesentium
-                    nemo placeat explicabo error perspiciatis? Possimus,
-                    maiores.
+                    Made a simple landing page for a e-book store. Currently working to make it fully interactive via JavaScript.
                   </p>
                   <div class="project__description--links">
                     <a
@@ -187,63 +180,25 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/google.jpg" class="project__img" alt="" />
+                <img src="./assets/treact clone.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">Google</h3>
+                  <h3 class="project__description--title">TReact Replica Project</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
+                    HTML, CSS, JavaScript
                   </h4>
                   <p class="project__description--para">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Necessitatibus quis asperiores repudiandae hic sequi, eum
-                    odio obcaecati minima modi iure laudantium ipsam praesentium
-                    nemo placeat explicabo error perspiciatis? Possimus,
-                    maiores.
+                    Tried recreating TReact's landing page from scratch to touch up on my HTML & CSS best practices.
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/velascojk"
+                      href="https://github.com/velascojk/recreating-treact"
                       class="project__description--link"
                       target="_blank"
                     >
                       <i class="fab fa-github"></i>
                     </a>
                     <a
-                      href="https://google.com"
-                      class="project__description--link"
-                      target="_blank"
-                    >
-                      <i class="fas fa-link"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img src="./assets/google.jpg" class="project__img" alt="" />
-                <div class="project__description">
-                  <h3 class="project__description--title">Google</h3>
-                  <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vue, Vuex
-                  </h4>
-                  <p class="project__description--para">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Necessitatibus quis asperiores repudiandae hic sequi, eum
-                    odio obcaecati minima modi iure laudantium ipsam praesentium
-                    nemo placeat explicabo error perspiciatis? Possimus,
-                    maiores.
-                  </p>
-                  <div class="project__description--links">
-                    <a
-                      href="https://github.com/velascojk"
-                      class="project__description--link"
-                      target="_blank"
-                    >
-                      <i class="fab fa-github"></i>
-                    </a>
-                    <a
-                      href="https://google.com"
+                      href="https://velascojk.github.io/recreating-treact/"
                       class="project__description--link"
                       target="_blank"
                     >
@@ -269,12 +224,12 @@
           </span>
         </a>
         <div class="footer__social--list">
-          <a href="http://google.com" class="
+          <a href="https://github.com/velascojk" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
           " target="_blank">GitHub</a>
-          <a href="http://google.com" class="
+          <a href="https://www.linkedin.com/in/velascojk/" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
