--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </h1>
             <p class="about-me__info--para">
               I'm an aspiring
-              <strong class="text--green">frontend software engineer</strong>
+              <strong class="text--green">frontend developer</strong>
               with a strong passion for building responsive and performant web
               applications with great user experiences, looking for an
               opportunity to break into the world of tech.
