--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               I'm an aspiring
               <strong class="text--green">frontend developer</strong>
               with a strong passion for building responsive and performant web
-              applications with great user experiences, looking for an
-              opportunity to break into the world of tech.
+              applications with great user experiences.
             </p>
             <div class="about-me__links">
               <a
