--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="about-me">
@@ -18,9 +17,9 @@
         <ul class="class nav__link--list">
           <li class="nav__link">
             <a
-              href="#languages"
+              href="#skills"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Languages</a>
+              >Skills</a>
           </li>
           <li class="nav__link">
             <a
@@ -39,7 +38,7 @@
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
               <img
-                src="./assets/akaza.jpg"
+                src="./assets/pfp3_photoshopped2.jpg"
                 class="about-me__picture"
                 alt="Picture of me!"
               />
@@ -48,10 +47,11 @@
               Hello! I'm <span class="text--green">J.K. Velasco</span>&nbsp;<span class="peacesign">✌️</span>
             </h1>
             <p class="about-me__info--para">
-              I'm an aspiring
-              <strong class="text--green">frontend developer</strong>
-              with a strong passion for building responsive and performant web
-              applications with great user experiences.
+              I'm a motivated
+              <strong class="text--green">IT student</strong>
+              with a strong focus on cybersecurity and networking. 
+              Eager to apply technical skills and gain hands-on experience. 
+              Passionate about problem-solving, staying updated with industry trends, and contributing to IT.
             </p>
             <div class="about-me__links">
               <a
@@ -91,50 +91,52 @@
         </div>
       </div>
     </section>
-    <section id="languages">
+    <section id="skills">
       <div class="container">
         <div class="row">
-          <h1>This is my <span class="text--green">technology stack</span></h1>
-          <div class="language__list">
-            <div class="language">
-              <figure class="language__img--wrapper">
+          <h1>
+            <span class="text--green">Skills</span>
+          </h1>
+          <div class="skill__list">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
                   alt=""
-                  class="language__img"
+                  class="skill__img"
                 />
               </figure>
-              <span class="language__name">HTML</span>
+              <span class="skill__name">HTML</span>
             </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
                 <img
                   src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
                   alt=""
-                  class="language__img"
+                  class="skill__img"
                 />
               </figure>
-              <span class="language__name">CSS</span>
+              <span class="skill__name">CSS</span>
             </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
                 <img
                   src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
                   alt=""
-                  class="language__img"
+                  class="skill__img"
                 />
               </figure>
-              <span class="language__name">JavaScript</span>
+              <span class="skill__name">JavaScript</span>
             </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
                 <img
                   src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
                   alt=""
-                  class="language__img"
+                  class="skill__img"
                 />
               </figure>
-              <span class="language__name">React</span>
+              <span class="skill__name">React</span>
             </div>
           </div>
         </div>
@@ -144,7 +146,7 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            Here are some of my <span class="text--green">projects</span>
+             <span class="text--green">Projects</span>
           </h1>
           <ul class="project__list">
             <li class="project">
