Added Interest section and removed about me welcome picture.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">J.K. Velasco</div>
+        <div class="personal__logo">J.K.</div>
         <ul class="class nav__link--list">
+          <li class="nav__link">
+            <a
+              href="#interested"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Interested</a>
+          </li>
           <li class="nav__link">
             <a
               href="#skills"
@@ -81,13 +87,52 @@
               </a>
             </div>
           </div>
-          <figure class="about-me__img--container">
+          <!-- <figure class="about-me__img--container">
             <img
               src="./assets/undraw_portfolio_website_re_jsdd.svg"
               class="about-me__img"
-              alt=""
-            />
-          </figure>
+              alt=""/>
+          </figure> -->
+        </div>
+      </div>
+    </section>
+    <section id="interested">
+      <div class="container">
+        <div class="row">
+          <h1>
+            <span class="text--green">Interested</span>
+          </h1>
+          <div class="interest__list">
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA A+</span>
+            </div>
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA Network+</span>
+            </div>
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/securityplus-logo.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA Security+</span>
+            </div>
         </div>
       </div>
     </section>
