Fixed Interested section CSS?

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               </figure>
               <span class="interest__name">CompTIA Security+</span>
             </div>
+          </div>
         </div>
       </div>
     </section>
