--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J.K. Velasco</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="./assets/pfp3_photoshopped2.jpg">
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"></script>
