--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">J.K.</div>
+        <div class="personal__logo">
+          <a href="#">
+           <img src="./assets/MySignature.png">
+          </a>
+        </div>
         <ul class="class nav__link--list">
           <li class="nav__link">
             <a
-              href="#interested"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Interested</a>
+              >Projects</a>
           </li>
           <li class="nav__link">
             <a
@@ -30,9 +34,9 @@
           </li>
           <li class="nav__link">
             <a
-              href="#projects"
+              href="#interested"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Projects</a>
+              >Interested</a>
           </li>
           <li class="nav__link">
             <a href="mailto:jkvelasco2018@gmail.com" class="nav__link--anchor nav__link--anchor-primary"
@@ -51,7 +55,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hello! I'm <span class="text--green">J.K. Velasco</span>&nbsp;<span class="peacesign">✌️</span>
+              Hello!<span class="peacesign">✌️</span>
             </h1>
             <p class="about-me__info--para">
               I'm a motivated
@@ -94,98 +98,6 @@
               class="about-me__img"
               alt=""/>
           </figure> -->
-        </div>
-      </div>
-    </section>
-    <section id="interested">
-      <div class="container">
-        <div class="row">
-          <h1>
-            <span class="text--green">Interested</span>
-          </h1>
-          <div class="interest__list">
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
-                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">CompTIA A+</span>
-            </div>
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
-                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">CompTIA Network+</span>
-            </div>
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
-                  src="https://partners.comptia.org/docs/default-source/resources/securityplus-logo.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">CompTIA Security+</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="skills">
-      <div class="container">
-        <div class="row">
-          <h1>
-            <span class="text--green">Skills</span>
-          </h1>
-          <div class="skill__list">
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">HTML</span>
-            </div>
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">CSS</span>
-            </div>
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">JavaScript</span>
-            </div>
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">React</span>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -260,11 +172,103 @@
         </div>
       </div>
     </section>
+    <section id="skills">
+      <div class="container">
+        <div class="row">
+          <h1>
+            <span class="text--green">Skills</span>
+          </h1>
+          <div class="skill__list">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">HTML</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">CSS</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">JavaScript</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">React</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="interested">
+      <div class="container">
+        <div class="row">
+          <h1>
+            <span class="text--green">Interested</span>
+          </h1>
+          <div class="interest__list">
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA A+</span>
+            </div>
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA Network+</span>
+            </div>
+            <div class="interest">
+              <figure class="interest__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/securityplus-logo.png"
+                  alt=""
+                  class="interest__img"
+                />
+              </figure>
+              <span class="interest__name">CompTIA Security+</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-            <img src="./assets/test222222.png" alt="" class="footer__logo--img">
+            <img src="./assets/FooterLogo.png" alt="" class="footer__logo--img">
           </figure>
           <span class="footer__logo--popper">
             Top
