Added project and project page.

--- a/index.html
+++ b/index.html
@@ -110,55 +110,24 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/ecommerce.png" class="project__img" alt="" />
+                <img src="./assets/thumbnail_virtualboxproject.png" class="project__img" alt="" />
                 <div class="project__description">
-                  <h3 class="project__description--title">E-commerce Project</h3>
+                  <h3 class="project__description--title">VirtualBox lab</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript
+                    VirtualBox, Windows Server 2016
                   </h4>
                   <p class="project__description--para">
-                    Made a simple landing page for a e-book store. Currently working to make it fully interactive via JavaScript.
+                    A practice lab replicating IT: Entry Level Helpdesk tasks using VirtualBox.
                   </p>
                   <div class="project__description--links">
                     <a
-                      href="https://github.com/velascojk/e-commerce-project"
+                      href="projectvirtualbox.html"
                       class="project__description--link"
-                      target="_blank"
                     >
-                      <i class="fab fa-github"></i>
+                      Read more!
                     </a>
                     <a
                       href="https://velascojk.github.io/e-commerce-project/"
-                      class="project__description--link"
-                      target="_blank"
-                    >
-                      <i class="fas fa-link"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img src="./assets/treact clone.png" class="project__img" alt="" />
-                <div class="project__description">
-                  <h3 class="project__description--title">TReact Replica Project</h3>
-                  <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript
-                  </h4>
-                  <p class="project__description--para">
-                    Tried recreating TReact's landing page from scratch to touch up on my HTML & CSS best practices.
-                  </p>
-                  <div class="project__description--links">
-                    <a
-                      href="https://github.com/velascojk/recreating-treact"
-                      class="project__description--link"
-                      target="_blank"
-                    >
-                      <i class="fab fa-github"></i>
-                    </a>
-                    <a
-                      href="https://velascojk.github.io/recreating-treact/"
                       class="project__description--link"
                       target="_blank"
                     >
