Fixed resume button, moved React to 'Interested'

--- a/index.html
+++ b/index.html
@@ -178,16 +178,6 @@
               </figure>
               <span class="skill__name">JavaScript</span>
             </div>
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">React</span>
-            </div>
           </div>
         </div>
       </div>
@@ -229,6 +219,16 @@
               </figure>
               <span class="interest__name">CompTIA Security+</span>
             </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">React</span>
+            </div>
           </div>
         </div>
       </div>
@@ -260,7 +260,7 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/VelascoResume_template.pdf" class="
+          <a href="./assets/VelascoResume.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
