--- a/projectvirtualbox.html
+++ b/projectvirtualbox.html
@@ -93,7 +93,7 @@
         link__hover-effect
         link__hover-effect--white
         " target="_blank">Email</a>
-        <a href="./assets/VelascoResume_template.pdf" class="
+        <a href="./assets/VelascoResume.pdf" class="
         footer__social--link
         link__hover-effect
         link__hover-effect--white
