--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/VelascoResume.pdf" class="
+          <a href="./assets/VelascoResume_2.docx.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
