--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <i class="far fa-envelope"></i>
               </a>
               <a
-                href="./assets/VelascoResume_template.pdf" 
+                href="./assets/VelascoResume_2025.pdf" 
                 class="about-me__link"
                 target="_blank"
               >
@@ -260,7 +260,7 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/VelascoResume_2.docx.pdf" class="
+          <a href="./assets/VelascoResume_2025.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
