Added certifications section, made About Me picture bigger, Updated Resume

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           </li>
           <li class="nav__link">
             <a
+              href="#certifications"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Certifications</a>
+          </li>
+          <li class="nav__link">
+            <a
               href="#skills"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Skills</a>
@@ -61,8 +67,8 @@
               I'm a motivated
               <strong class="text--green">IT student</strong>
               with a strong focus on cybersecurity and networking. 
-              Eager to apply technical skills and gain hands-on experience. 
               Passionate about problem-solving, staying updated with industry trends, and contributing to IT.
+              Eager to apply technical skills and gain hands-on experience! 
             </p>
             <div class="about-me__links">
               <a
@@ -84,7 +90,7 @@
                 <i class="far fa-envelope"></i>
               </a>
               <a
-                href="./assets/VelascoResume_2025.pdf" 
+                href="./assets/JanKevin_Velasco_Resume.pdf" 
                 class="about-me__link"
                 target="_blank"
               >
@@ -92,12 +98,6 @@
               </a>
             </div>
           </div>
-          <!-- <figure class="about-me__img--container">
-            <img
-              src="./assets/undraw_portfolio_website_re_jsdd.svg"
-              class="about-me__img"
-              alt=""/>
-          </figure> -->
         </div>
       </div>
     </section>
@@ -131,6 +131,28 @@
               </div>
             </li>
           </ul>
+        </div>
+      </div>
+    </section>
+    <section id="certifications">
+      <div class="container">
+        <div class="row">
+          <h1>
+            <span class="text--green">Certifications</span>
+          </h1>
+          <div class="certification__list">
+          <div class="certification">
+              <figure class="certification__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
+                  alt=""
+                  class="certification__img"
+                />
+              </figure>
+              <span class="certification__name">A+</span>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
     </section>
@@ -185,22 +207,12 @@
             <div class="interest">
               <figure class="interest__img--wrapper">
                 <img
-                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">CompTIA A+</span>
-            </div>
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
                   src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
                   alt=""
                   class="interest__img"
                 />
               </figure>
-              <span class="interest__name">CompTIA Network+</span>
+              <span class="interest__name">Network+</span>
             </div>
             <div class="interest">
               <figure class="interest__img--wrapper">
@@ -210,7 +222,7 @@
                   class="interest__img"
                 />
               </figure>
-              <span class="interest__name">CompTIA Security+</span>
+              <span class="interest__name">Security+</span>
             </div>
             <div class="skill">
               <figure class="skill__img--wrapper">
@@ -253,7 +265,7 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/VelascoResume_2025.pdf" class="
+          <a href="./assets/JanKevin_Velasco_Resume.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
