--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
               >Skills</a>
           </li>
           <li class="nav__link">
-            <a
-              href="#interested"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Interested</a>
-          </li>
-          <li class="nav__link">
             <a href="mailto:jkvelasco2018@gmail.com" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a>
           </li>
@@ -61,7 +55,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hello!<span class="peacesign">✌️</span>
+              Hello, I'm <strong class="text--green">J.K.</strong>!<span class="peacesign">✌️</span>
             </h1>
             <p class="about-me__info--para">
               I'm a motivated
@@ -120,12 +114,7 @@
                     A practice lab replicating IT: Entry Level Helpdesk tasks using VirtualBox.
                   </p>
                   <div class="project__description--links">
-                    <a
-                      href="projectvirtualbox.html"
-                      class="project__description--link"
-                    >
-                      Read more!
-                    </a>
+                    <a href="projectvirtualbox.html"class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
                   </div>
                 </div>
               </div>
@@ -192,47 +181,6 @@
                 />
               </figure>
               <span class="skill__name">JavaScript</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="interested">
-      <div class="container">
-        <div class="row">
-          <h1>
-            <span class="text--green">Interested</span>
-          </h1>
-          <div class="interest__list">
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
-                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">Network+</span>
-            </div>
-            <div class="interest">
-              <figure class="interest__img--wrapper">
-                <img
-                  src="https://partners.comptia.org/docs/default-source/resources/securityplus-logo.png"
-                  alt=""
-                  class="interest__img"
-                />
-              </figure>
-              <span class="interest__name">Security+</span>
-            </div>
-            <div class="skill">
-              <figure class="skill__img--wrapper">
-                <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
-                  alt=""
-                  class="skill__img"
-                />
-              </figure>
-              <span class="skill__name">React</span>
             </div>
           </div>
         </div>
