--- a/projectvirtualbox.html
+++ b/projectvirtualbox.html
@@ -25,10 +25,10 @@
           <a href="index.html#projects" class="nav__link--anchor link__hover-effect link__hover-effect--black">Projects</a>
         </li>
         <li class="nav__link">
-          <a href="index.html#skills" class="nav__link--anchor link__hover-effect link__hover-effect--black">Skills</a>
+          <a href="index.html#certifications" class="nav__link--anchor link__hover-effect link__hover-effect--black">Certifications</a>
         </li>
         <li class="nav__link">
-          <a href="index.html#interested" class="nav__link--anchor link__hover-effect link__hover-effect--black">Interested</a>
+          <a href="index.html#skills" class="nav__link--anchor link__hover-effect link__hover-effect--black">Skills</a>
         </li>
         <li class="nav__link">
           <a href="mailto:jkvelasco2018@gmail.com" class="nav__link--anchor nav__link--anchor-primary">Contact</a>
@@ -93,7 +93,7 @@
         link__hover-effect
         link__hover-effect--white
         " target="_blank">Email</a>
-        <a href="./assets/VelascoResume.pdf" class="
+        <a href="./assets/JanKevin_Velasco_Resume_2025.pdf" class="
         footer__social--link
         link__hover-effect
         link__hover-effect--white
