Fixed fontawesome logos and removed my own logo

--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <title>J.K. Velasco</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="./assets/pfp3_photoshopped2.jpg">
-    <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/910b88c4e7.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">
-          <a href="#">
-           <img src="./assets/MySignature.png">
-          </a>
+        <div class="nav__link">
+          <a a href="index.html" class="portfolio__header">Portfolio</a>
         </div>
-        <ul class="class nav__link--list">
+        <ul class="nav__link--list">
           <li class="nav__link">
             <a
               href="#projects"
