--- a/projectvirtualbox.html
+++ b/projectvirtualbox.html
@@ -8,17 +8,14 @@
     <title>J.K. Velasco</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="./assets/pfp3_photoshopped2.jpg">
-    <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/910b88c4e7.js" crossorigin="anonymous"></script>
   </head>
   <body>
   <section id="project-virtualbox-entry">
     <nav>
-      <div class="personal__logo">
-        <a href="index.html">
-          <img src="./assets/MySignature.png" alt="Personal logo" />
-        </a>
+      <div class="nav__link">
+        <a a href="index.html" class="portfolio__header">Portfolio</a>
+      </div>
       </div>
       <ul class="nav__link--list">
         <li class="nav__link">
