Added new project in project section, need to make project landing page

--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
+                <img src="./assets/thumbnail_cloudwebproject.png" class="project__img" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Cloud-Based Secure Web App</h3>
+                  <h4 class="project__description--sub-title">
+                    AWS EC2 (Free Tier), Amazon Linux 2, Apache HTTP Server, SSH, OpenSSL, AWS Security Groups
+                  </h4>
+                  <p class="project__description--para">
+                    Created a secure web app by deploying a simple HTML page on an AWS EC2 instance using Apache, configuring SSL for HTTPS, and managing firewall rules to ensure secure access.
+                  </p>
+                  <div class="project__description--links">
+                    <a href=""class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
                 <img src="./assets/thumbnail_virtualboxproject.png" class="project__img" alt="" />
                 <div class="project__description">
                   <h3 class="project__description--title">VirtualBox lab</h3>
