Added Net+, added new skills, added current focus to header.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
               Passionate about problem-solving, staying updated with industry trends, and contributing to IT.
               Eager to apply technical skills and gain hands-on experience! 
             </p>
+            <p class="about-me__info--para">
+              Current focus: <strong class="text--green">CompTIA Security+ certification</strong>!
+            </p>
             <div class="about-me__links">
               <a
                 href="https://www.linkedin.com/in/velascojk/"
@@ -153,6 +156,16 @@
               </figure>
               <span class="certification__name">A+</span>
             </div>
+            <div class="certification">
+              <figure class="certification__img--wrapper">
+                <img
+                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
+                  alt=""
+                  class="certification__img"
+                />
+              </figure>
+              <span class="certification__name">Network+</span>
+            </div>
           </div>
           </div>
         </div>
@@ -165,6 +178,36 @@
             <span class="text--green">Skills</span>
           </h1>
           <div class="skill__list">
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">Python</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">Linux</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/en/3/35/Microsoft_Office_Logo_%282019-present%29.svg"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">Microsoft Office</span>
+            </div>
             <div class="skill">
               <figure class="skill__img--wrapper">
                 <img
@@ -194,6 +237,16 @@
                 />
               </figure>
               <span class="skill__name">JavaScript</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">Visual Studio Code</span>
             </div>
           </div>
         </div>
