Updated CompTIA cert logos

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="certification">
               <figure class="certification__img--wrapper">
                 <img
-                  src="https://partners.comptia.org/docs/default-source/resources/a-logo-jpeg.png"
+                  src="./assets/AplusLogoCertifiedCE.png"
                   alt=""
                   class="certification__img"
                 />
@@ -159,7 +159,7 @@
             <div class="certification">
               <figure class="certification__img--wrapper">
                 <img
-                  src="https://partners.comptia.org/docs/default-source/resources/networkplus-logo.png"
+                  src="./assets/NetworkPlusLogoCertifiedCE.png"
                   alt=""
                   class="certification__img"
                 />
