Updated resume & cert logos, added Security+ to certs.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
               Passionate about problem-solving, staying updated with industry trends, and contributing to IT.
               Eager to apply technical skills and gain hands-on experience! 
             </p>
-            <p class="about-me__info--para">
-              Current focus: <strong class="text--green">CompTIA Security+ certification</strong>!
-            </p>
             <div class="about-me__links">
               <a
                 href="https://www.linkedin.com/in/velascojk/"
@@ -83,7 +80,7 @@
                 <i class="far fa-envelope"></i>
               </a>
               <a
-                href="./assets/JanKevin_Velasco_Resume_2025.pdf" 
+                href="./assets/JanKevinVelascoResume2025.pdf" 
                 class="about-me__link"
                 target="_blank"
               >
@@ -143,13 +140,13 @@
       <div class="container">
         <div class="row">
           <h1>
-            <span class="text--green">Certifications</span>
+            <span class="text--green">Professional Certifications</span>
           </h1>
           <div class="certification__list">
           <div class="certification">
               <figure class="certification__img--wrapper">
                 <img
-                  src="./assets/AplusLogoCertifiedCE.png"
+                  src="./assets/a-logo-jpeg.png"
                   alt=""
                   class="certification__img"
                 />
@@ -159,12 +156,22 @@
             <div class="certification">
               <figure class="certification__img--wrapper">
                 <img
-                  src="./assets/NetworkPlusLogoCertifiedCE.png"
+                  src="./assets/networkplus-logo.png"
                   alt=""
                   class="certification__img"
                 />
               </figure>
               <span class="certification__name">Network+</span>
+            </div>
+            <div class="certification">
+              <figure class="certification__img--wrapper">
+                <img
+                  src="./assets/securityplus-logo.png"
+                  alt=""
+                  class="certification__img"
+                />
+              </figure>
+              <span class="certification__name">Security+</span>
             </div>
           </div>
           </div>
@@ -279,7 +286,7 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/JanKevin_Velasco_Resume_2025.pdf" class="
+          <a href="./assets/JanKevinVelascoResume2025.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
