Added AWS & Python in Skills section.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
             <div class="skill">
               <figure class="skill__img--wrapper">
                 <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">Amazon Web Services</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
                   src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg"
                   alt=""
                   class="skill__img"
@@ -214,6 +224,16 @@
                 />
               </figure>
               <span class="skill__name">Microsoft Office</span>
+            </div>
+            <div class="skill">
+              <figure class="skill__img--wrapper">
+                <img
+                  src="./assets/github-mark.png"
+                  alt=""
+                  class="skill__img"
+                />
+              </figure>
+              <span class="skill__name">GitHub</span>
             </div>
             <div class="skill">
               <figure class="skill__img--wrapper">
