Created Project 2 landing page, fixed Key features in Project 1.

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                     AWS EC2 (Free Tier), Amazon Linux 2, Apache HTTP Server, SSH, OpenSSL, AWS Security Groups
                   </h4>
                   <p class="project__description--para">
-                    Created a secure web app by deploying a simple HTML page on an AWS EC2 instance using Apache, configuring SSL for HTTPS, and managing firewall rules to ensure secure access.
+                    Created a web app by deploying a simple HTML page on an AWS EC2 instance using Apache, configuring SSL for HTTPS, and managing firewall rules.
                   </p>
                   <div class="project__description--links">
-                    <a href=""class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
+                    <a href="project-cloudwebapp.html"class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
                   </div>
                 </div>
               </div>
@@ -127,7 +127,7 @@
                     A practice lab replicating IT: Entry Level Helpdesk tasks using VirtualBox.
                   </p>
                   <div class="project__description--links">
-                    <a href="projectvirtualbox.html"class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
+                    <a href="project-virtualbox.html"class="project__description--link project__hover-effect project__hover-effect--black">View more!</a>
                   </div>
                 </div>
               </div>
