removed old email with new, updated resume

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
               >
                 <i class="fab fa-github"></i>
               </a>
-              <a href="mailto:jkvelasco2018@gmail.com" 
+              <a href="mailto:velascojankevin@gmail.com" 
               class="about-me__link">
                 <i class="far fa-envelope"></i>
               </a>
               <a
-                href="./assets/JanKevinVelascoResume2025.pdf" 
+                href="./assets/JanKevinVelasco_Resume.pdf" 
                 class="about-me__link"
                 target="_blank"
               >
@@ -301,12 +301,12 @@
           link__hover-effect
           link__hover-effect--white
           " target="_blank">LinkedIn</a>
-          <a href="mailto:jkvelasco2018@gmail.com" class="
+          <a href="mailto:velascojankevin@gmail.com" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
           " target="_blank">Email</a>
-          <a href="./assets/JanKevinVelascoResume2025.pdf" class="
+          <a href="./assets/JanKevinVelasco_Resume.pdf" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
