--- a/project-virtualbox.html
+++ b/project-virtualbox.html
@@ -138,12 +138,12 @@
         link__hover-effect
         link__hover-effect--white
         " target="_blank">LinkedIn</a>
-        <a href="mailto:jkvelasco2018@gmail.com" class="
+        <a href="mailto:velascojankevin@gmail.com" class="
         footer__social--link
         link__hover-effect
         link__hover-effect--white
         " target="_blank">Email</a>
-        <a href="./assets/JanKevinVelascoResume2025.pdf" class="
+        <a href="./assets/JanKevinVelasco_Resume.pdf" class="
         footer__social--link
         link__hover-effect
         link__hover-effect--white
