Revamped all sections!

--- a/project-cloudwebapp.html
+++ b/project-cloudwebapp.html
@@ -14,7 +14,7 @@
   <section id="project-cloudwebapp-entry">
     <nav>
       <div class="nav__link">
-        <a a href="index.html" class="portfolio__header">Portfolio</a>
+        <a a href="index.html" class="portfolio__header">J.K.'s Portfolio</a>
       </div>
       </div>
       <ul class="nav__link--list">
