Fixed/updated ServiceNow logo

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="skill">
                   <div class="skill__hover-effect">
                     <figure class="skill__img--wrapper">
-                      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/ServiceNow_logo.svg" alt="ServiceNow" class="skill__img" />
+                      <img src="https://www.servicenow.com/content/dam/servicenow-assets/public/en-us/images/company-library/media/logo/sn-logo-color.png" alt="ServiceNow" class="skill__img" />
                     </figure>
                     <span class="skill__name">ServiceNow</span>
                   </div>
@@ -280,7 +280,7 @@
                 <div class="skill">
                   <div class="skill__hover-effect">
                     <figure class="skill__img--wrapper">
-                      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/ServiceNow_logo.svg" alt="ServiceNow" class="skill__img" />
+                      <img src="https://www.servicenow.com/content/dam/servicenow-assets/public/en-us/images/company-library/media/logo/sn-logo-color.png" alt="ServiceNow" class="skill__img" />
                     </figure>
                     <span class="skill__name">ServiceNow</span>
                   </div>
